[package]
name = "gestionnaire_fichier"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-multipart = "0.4"
actix-files = "0.6"
tera = "1.18"
futures-util = "0.3"
sanitize-filename = "0.5" # Pour éviter les noms de fichiers dangereux
tokio = { version = "1", features = ["full"] }
chrono = "0.4.39"
serde_json = "1.0.133"